--- a/Projet Pizzeria/View/CommandeView.xaml
+++ b/Projet Pizzeria/View/CommandeView.xaml
@@ -136,7 +136,8 @@
                     EnableRowVirtualization="True"
                     IsReadOnly="True"
                     ItemsSource="{Binding Source={StaticResource commandeViewSource}}"
-                    RowDetailsVisibilityMode="VisibleWhenSelected">
+                    RowDetailsVisibilityMode="VisibleWhenSelected"
+                    SelectionMode="Single">
                     <DataGrid.Columns>
                         <DataGridTextColumn
                             Width="SizeToHeader"
@@ -163,7 +164,8 @@
                     EnableRowVirtualization="True"
                     IsReadOnly="True"
                     ItemsSource="{Binding Source={StaticResource commandeItemsViewSource}}"
-                    RowDetailsVisibilityMode="VisibleWhenSelected" />
+                    RowDetailsVisibilityMode="VisibleWhenSelected"
+                    SelectionMode="Single" />
             </Border>
             <!--#endregion // Items Detail Grid-->
 
