Afficher une commande moyennant son numero

--- a/Projet Pizzeria/View/CommandeView.xaml
+++ b/Projet Pizzeria/View/CommandeView.xaml
@@ -106,7 +106,10 @@
                 <Separator />
 
                 <StackPanel>
-                    <TextBox Name="NoCommandeTextBox" Width="100" />
+                    <TextBox
+                        Name="NoCommandeTextBox"
+                        Width="100"
+                        TextChanged="NoCommandeTextBox_TextChanged" />
                     <TextBlock HorizontalAlignment="Center">No. Commande</TextBlock>
                 </StackPanel>
 
