--- a/Projet Pizzeria/View/NewCommandeDialog.xaml
+++ b/Projet Pizzeria/View/NewCommandeDialog.xaml
@@ -36,10 +36,12 @@
         </Grid.Resources>
 
         <Border Grid.RowSpan="3">
-            <ListBox
-                Name="ItemListBox"
-                Width="300"
-                ItemsSource="{Binding NewCommande.Items}" />
+            <ScrollViewer Height="292.8">
+                <ListBox
+                    Name="ItemListBox"
+                    Width="300"
+                    ItemsSource="{Binding NewCommande.Items}" />
+            </ScrollViewer>
         </Border>
 
         <Border Grid.Column="1">
@@ -94,7 +96,6 @@
                         <Button Name="AddPizza" Click="AddPizza_Click">Ajouter</Button>
                     </StackPanel>
                 </StackPanel>
-
             </GroupBox>
         </Border>
 
@@ -113,9 +114,7 @@
                         <TextBlock FontStyle="Italic">Prix Commande (€):</TextBlock>
                         <TextBlock Margin="2,0,0,0" Text="{Binding NewCommande.MontantTotal}" />
                     </WrapPanel>
-
                 </StackPanel>
-
             </GroupBox>
         </Border>
 
