--- a/Projet Pizzeria/View/CommunicationMessageView.xaml
+++ b/Projet Pizzeria/View/CommunicationMessageView.xaml
@@ -28,19 +28,19 @@
 
         <GroupBox Header="Client">
             <ScrollViewer>
-                <ListView Name="clientMessages" />
+                <ListView Name="clientMessages" ItemsSource="{Binding MessagesClient, UpdateSourceTrigger=PropertyChanged}" />
             </ScrollViewer>
         </GroupBox>
 
         <GroupBox Grid.Column="1" Header="Cuisine">
             <ScrollViewer>
-                <ListView Name="cuisineMessages" />
+                <ListView Name="cuisineMessages" ItemsSource="{Binding MessagesCuisine, UpdateSourceTrigger=PropertyChanged}" />
             </ScrollViewer>
         </GroupBox>
 
         <GroupBox Grid.Row="1" Header="Commis">
             <ScrollViewer>
-                <ListView Name="commisMessages" />
+                <ListView Name="commisMessages" ItemsSource="{Binding MessagesCommis, UpdateSourceTrigger=PropertyChanged}" />
             </ScrollViewer>
         </GroupBox>
 
@@ -49,7 +49,7 @@
             Grid.Column="1"
             Header="Livreur">
             <ScrollViewer>
-                <ListView Name="livreurMessage" />
+                <ListView Name="livreurMessage" ItemsSource="{Binding MessagesLivreur, UpdateSourceTrigger=PropertyChanged}" />
             </ScrollViewer>
         </GroupBox>
     </Grid>
